@@ -1,3 +1,12 @@
+2005-12-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/gdict-window.c: use the "database" property, and hook it up to
+	GConf.
+
+	* libgdict/gdict-defbox.h, libgdict/gdict-defbox.c: add the "database"
+	property; add the gdict_defbox_set_database() and
+	gdict_defbox_get_database() accessors for the "database" property.
+
 2005-12-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	A bunch UI fixes from Dennis Cranston, and a bunch of fixes triggered
